--- a/src/pages/produktoversikt/arbeidsgiver/arbeidsgiver.njk
+++ b/src/pages/produktoversikt/arbeidsgiver/arbeidsgiver.njk
@@ -74,8 +74,8 @@ permalink: '/produktoversikt-arbeidsgiver/'
       </div>
     </div>
 
-    <div class="mt-8 grid lg:mt-12 grid-cols-layout">
-      <div class="w-full pb-20 grid gap-8 lg:gap-x-16 lg:items-start lg:grid-cols-sidebar col-narrow lg:col-wide">
+    <div class="grid mt-8 lg:mt-12 grid-cols-layout">
+      <div class="grid w-full gap-8 pb-20 lg:gap-x-16 lg:items-start lg:grid-cols-sidebar col-narrow lg:col-wide">
 
         <div class="relative lg:row-start-1 lg:row-span-3 lg:col-start-2" x-data="{ filterDrawer: false }">
           <button
@@ -98,7 +98,7 @@ permalink: '/produktoversikt-arbeidsgiver/'
           >
             <form class="flex flex-col h-full bg-white shadow-drawer col-narrow lg:hidden" x-on:click.outside="filterDrawer = false, filterTags = false">
               <div class="flex-1 px-6 pb-12 overflow-y-auto overscroll-y-contain">
-                <div class="relative pt-6 grid" >
+                <div class="relative grid pt-6" >
                   <div>
                     <label for="searchFilter-mobile" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
                     <div class="relative mt-1">
@@ -177,7 +177,7 @@ permalink: '/produktoversikt-arbeidsgiver/'
                 data-area="alle {% for item in product.area %}{{ item | slugify }} {% endfor %}"
               >
 
-                <div class="relative flex items-center py-5 text-left rounded-lg gap-4 px-clamp-gap sm:px-4 focus-within:z-20" x-bind:class="expanded ? 'bg-deepblue-50 ring-1 ring-deepblue-50 fine:hover:bg-deepblue-100' : 'fine:hover:bg-deepblue-100'">
+                <div class="relative flex items-center gap-4 py-5 text-left rounded-lg px-clamp-gap sm:px-4 focus-within:z-20" x-bind:class="expanded ? 'bg-deepblue-50 ring-1 ring-deepblue-50 fine:hover:bg-deepblue-100' : 'fine:hover:bg-deepblue-100'">
                   {%- if product.icon -%}
                     {{ product.icon | svgContents('w-12 h-12 shrink-0') | safe }}
                   {%- endif -%}
@@ -188,12 +188,12 @@ permalink: '/produktoversikt-arbeidsgiver/'
                       {{ product.title | safe }}
                     </h2>
                     <p class="text-base">
-                      {%- for item in product.type -%}
+                      {% for item in product.type %}
                         <span>{{ item }}</span>,
-                      {%- endfor -%}
-                      {%- for item in product.area -%}
+                      {% endfor %}
+                      {% for item in product.area %}
                         <span class="">{{ item }}</span>{{ ', ' if loop.length > 1 and not loop.last }}
-                      {%- endfor -%}
+                      {% endfor %}
                     </p>
                   </div>
                   <button
