--- a/src/_includes/macros/microcard.njk
+++ b/src/_includes/macros/microcard.njk
@@ -3,7 +3,7 @@
   {%- set microcardClasses = "bg-white ring-1 ring-gray-300 fine:hover:ring-gray-500 fine:hover:shadow" -%}
 
   <a href="{{ params.href or '#' }}" class="inline-flex items-center gap-2 pl-2.5 pr-3.5 py-1.5 shadow-sm text-base no-underline rounded-full leading-tight text-left {{ params.class }} {{ microcardClasses }}">
-    <span class="{{ params.dot | safe or 'bg-gray-300' }} w-3 h-3 rounded-full"></span>
+    <span class="{{ params.dot | safe or 'bg-gray-400/50' }} w-3 h-3 rounded-full"></span>
     <span>{{ params.text | safe }}</span>
   </a>
 {%- endmacro -%}
