--- a/src/pages/soknad-og-skjema/soknad-og-skjema.njk
+++ b/src/pages/soknad-og-skjema/soknad-og-skjema.njk
@@ -33,11 +33,11 @@ bodyClass: 'bg-white'
 {% endmacro %}
 
 {%- block content -%}
-  <main class="grid py-8 text-lg grid-cols-layout" x-data="{ stepperOpen: false }">
+  <main class="grid py-8 text-lg md:py-12 grid-cols-layout" x-data="{ stepperOpen: false }">
     <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 grid md:grid-cols-[6rem_auto] gap-x-8 items-start mb-12 w-full md:pr-24">
 
       {# Pictogram #}
-      {{ '/src/_includes/svg/pictograms/soknad-og-skjema.svg' | svgContents('w-full h-auto max-w-20 md:ml-2 text-green-800 absolute right-0 -top-3 md:-top-1 md:relative hidden xs:block') | safe }}
+      {{ '/src/_includes/svg/pictograms/soknad-og-skjema.svg' | svgContents('w-full h-auto max-w-20 md:ml-2 text-green-800 absolute right-0 md:relative hidden xs:block') | safe }}
 
       {# Intro #}
       <div class="md:col-start-2 md:row-start-1">
@@ -98,22 +98,28 @@ bodyClass: 'bg-white'
                 </p>
 
                 <div class="grid mt-2 border border-gray-300 divide-y divide-gray-300 rounded">
-                  <div class="relative px-3 py-3 bg-white rounded-t fine:hover:bg-blue-50">
-                    <p class="font-semibold">Feltgruppe 1</p>
-                    <button class="absolute inset-0 rounded" type="button">
-                      <span class="sr-only">Endre eller oppdater info</span>
+                  <div class="relative flex items-center justify-between px-3 py-3 bg-white rounded-t min-h-16">
+                    <div>
+                      <p class="font-semibold">Feltgruppe 1</p>
+                      <p class="text-base">Juli 2022—Mars 2023</p>
+                    </div>
+                    <button class="px-3 font-semibold text-blue-500 rounded fine:hover:underline py-2-5" type="button">
+                      <span class="">Rediger felter</span>
                     </button>
                   </div>
-                  <div class="relative px-3 py-3 bg-white rounded-b fine:hover:bg-blue-50">
-                    <p class="font-semibold">Feltgruppe 2</p>
-                    <button class="absolute inset-0 rounded" type="button">
-                      <span class="sr-only">Endre eller oppdater info</span>
+                  <div class="relative flex items-center justify-between px-3 py-3 bg-white rounded-b min-h-16">
+                    <div>
+                      <p class="font-semibold">Feltgruppe 2</p>
+                      <p class="text-base">Okt 2020—Juni 2022</p>
+                    </div>
+                    <button class="px-3 font-semibold text-blue-500 rounded fine:hover:underline py-2-5" type="button">
+                      <span class="">Rediger felter</span>
                     </button>
                   </div>
                 </div>
 
                 <div class="relative z-50 mt-2 bg-white border border-gray-300 rounded shadow" x-show="showFieldGroup">
-                  <div class="p-4 md:p-6">
+                  <div class="p-3">
                   {{ form.textinput({ label: 'Tekstfelt' }) }}
                   <fieldset class="mt-6 ">
                     <legend class="font-semibold">Radioknapper</legend>
