--- a/src/pages/produkt/produkt.njk
+++ b/src/pages/produkt/produkt.njk
@@ -10,7 +10,7 @@ order: 4
 
 {%- block content -%}
   <main class="grid py-8 text-lg md:py-12 grid-cols-layout">
-    <div class="relative col-default md:col-wide md:mx-0 grid sm:grid-cols-[6rem_auto] gap-x-8 items-start mb-12 md:pr-12">
+    <div class="relative col-default md:col-wide md:mx-0 grid sm:grid-cols-[6rem_auto] gap-x-8 items-start mb-12 sm:pr-20 md:pr-0">
       {{ '/src/_includes/svg/pictograms/utvidet-barnetrygd.svg' | svgContents('w-full h-auto max-w-20 sm:ml-1 top-2 text-green-800 absolute right-0 sm:relative') | safe }}
 
       <div class="sm:col-start-2 sm:row-start-1">
